tmux: add popup

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,6 +28,7 @@ bind c new-window -c "#{pane_current_path}"
 bind m choose-window -F "#{window_index}: #{window_name}" "join-pane -h -t %%"
 bind M choose-window -F "#{window_index}: #{window_name}" "join-pane -v -t %%"
 bind R source ~/.tmux.conf \; display "tmux.conf sourced!"
+bind P display-popup
 
 set -ga terminal-features "*:hyperlinks" # Enable hyperlinks
 
