--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -29,7 +29,7 @@ bind h split-window -v -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
 # Easy reloading
-bind R source ~/.tmux.conf \; display "tmux.conf sourced!"
+bind R source ~/.config/tmux/tmux.conf \; display "tmux.conf sourced!"
 
 # Window/Pane Management
 bind m choose-window -F "#{window_index}: #{window_name}" "join-pane -h -t %%"
@@ -39,7 +39,10 @@ bind M choose-window -F "#{window_index}: #{window_name}" "join-pane -v -t %%"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
-# Standard clipboard plugin (replaces better-mouse-mode for copying)
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
+
+# Standard clipboard plugin
 set -g @plugin 'tmux-plugins/tmux-yank' 
 set -g @yank_selection 'clipboard'
 set -g @yank_selection_mouse 'clipboard'
@@ -48,11 +51,11 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on'
 
-# Theme (Catppuccin)
-set -g @plugin 'catppuccin/tmux'
-set -g @catppuccin_flavour 'mocha'
+# Theme
+set -g @plugin 'catppuccin/tmux#v0.3.0'
+set -g @catppuccin_flavor 'mocha'
 set -g @catppuccin_window_current_text "#W"
 set -g @catppuccin_window_default_text "#W"
 
-# Initialize plugin manager (keep this line at the very bottom)
-run '~/.tmux/plugins/tpm/tpm'
+# Initialise plugin manager (keep this line at the very bottom)
+run '~/.config/tmux/plugins/tpm/tpm'
